# cooktoday

./: Makefile  README.md  app.py  conftest.py  pyproject.toml
.github/workflows/: main.yaml
src/what_to_cook/: api_client.py  data_manager.py
tests/: test_api_client.py  test_app.py  test_app_additional.py  test_fuzzing.py
