[project]
name = "cooktoday"
version = "0.0.1"
description = "\"What to cook today\" application"
authors = [
    {name = "justcgh9",email = "a.kabardiyadi@innopolis.university"}
]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "python  (>=3.11)",
    "requests (>=2.32.3,<3.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "streamlit-js-eval (>=0.1.7,<0.2.0)",
    "streamlit-local-storage (>=0.0.25,<0.0.26)",
    "ruff (>=0.11.7,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
