[project]
name = "cooktoday"
version = "0.1.0"
description = ""
authors = [
    {name = "Macoyshev",email = "make.oynoshev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff (>=0.11.7,<0.12.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "streamlit-js-eval (>=0.1.7,<0.2.0)",
    "streamlit-local-storage (>=0.0.25,<0.0.26)",
    "requests (>=2.32.3,<3.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
flake8 = "^7.2.0"
bandit = "^1.8.3"

